Fixed responsiveness on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ h3 {
 
 .about ul {
   padding: 0;
-  margin: 100px 0; 
+  margin: 100px 0;
 }
 
 .about-skills {
@@ -115,19 +115,15 @@ h3 {
   box-shadow: 0 5px 30px rgba(102, 46, 237, 0.7);
 }
 
-.about-skills:hover {
-  box-shadow: 0 5px 30px rgba(102, 46, 237, 0.7);
-}
-
 .about-icons {
   color: rgba(255, 255, 255);
   font-size: 50px;
   display: flex;
-  justify-content:space-evenly;
+  justify-content: space-evenly;
 }
 
 .icon-bootstrap {
-  color: #6e509c;
+  color: #8d51e6;
 }
 
 .skills-paragraph {
@@ -247,7 +243,7 @@ h3 {
 
 @media (max-width: 1900px) {
   .container-projects {
-    padding:0 12px;
+    padding: 0 12px;
   }
 
   .projects {
@@ -298,10 +294,10 @@ h3 {
   .nav-home {
     font-size: 18px;
   }
-  
-   nav li {
-     padding: 0;
-   }
+
+  nav li {
+    padding: 0;
+  }
 
   nav a {
     font-size: 14px;
@@ -322,7 +318,7 @@ h3 {
   }
 
   .hero {
-    padding: 100px 0;
+    padding: 100px 0 0;
     text-align: center;
   }
 
@@ -346,15 +342,17 @@ h3 {
   }
 
   .about {
-    margin-bottom: 100px;
+    margin: 0;
+    padding: 100px 0;
   }
 
-  .about p, .skills-paragraph {
+  .about p,
+  .skills-paragraph {
     font-size: 15px;
   }
 
   .about-skills {
-    padding:30px;
+    padding: 30px;
     max-width: 80%;
     margin-top: 10px;
   }
